--- a/final.Rmd
+++ b/final.Rmd
@@ -152,6 +152,22 @@ roc = roc(test$stroke, glm_prob2)
 plot(roc, legacy.axes = TRUE, print.auc = TRUE)
 plot(smooth(roc), col = 4, add = TRUE)
 ```
+## MARS
+
+```{r}
+ctrl1 = trainControl(
+    method = "cv",
+    number = 10,
+    verboseIter = TRUE
+)
+mars_grid <- expand.grid(degree = 1:3, nprune = 2:20)
+set.seed(1)
+mars.fit <- train(x,y,
+method = 'earth', tuneGrid = mars_grid, trControl = ctrl1)
+mars.fit$bestTune
+
+
+```
 
 ## LDA
 
