--- a/p8106_final.Rmd
+++ b/p8106_final.Rmd
@@ -35,12 +35,22 @@ library(MASS)
 library(e1071)
 library(mlbench)
 library(pROC)
+library(arsenal)
 ```
 
-Load, clean, and tidy data
+# Introduction
+
+Stroke is a serious life-threatening medical condition. According to the World Health Organization, stroke is the second leading cause of death globally. To better understand which factors correlate to the stroke event, our group find a stroke prediction dataset. This dataset contains twelve columns. The first column labels the unique identifier of the patient. The last column records the occurrence of stroke by 1 (Yes) or 0 (No). The other ten columns contain the observations of possible predictors.
+
+# Load, clean, and tidy data
 
 ```{r}
 stroke = read_csv("./healthcare-dataset-stroke-data.csv") %>% 
+  mutate(
+    bmi = as.numeric(bmi)
+  )
+
+stroke1 = stroke %>% 
   janitor::clean_names() %>% 
   filter(
     bmi != "N/A"
@@ -77,11 +87,13 @@ stroke = read_csv("./healthcare-dataset-stroke-data.csv") %>%
       "smokes" = 2,
       "Unknown" = 3
     ),
-    bmi = as.numeric(bmi),
     stroke = as.factor(stroke)
+  ) %>% 
+  relocate(
+    age, avg_glucose_level, bmi
   )
 
-stroke2 = stroke %>% 
+stroke2 = stroke1 %>% 
   mutate(
     gender = as.factor(gender),
     hypertension = as.factor(hypertension),
@@ -93,151 +105,36 @@ stroke2 = stroke %>%
   )
 ```
 
-# Visualization
+# Exploratory analysis/ visualization
 
 ```{r}
-transparentTheme(trans = .4)
+stats = tableby(stroke ~ gender + age + hypertension + heart_disease + ever_married + work_type + Residence_type + avg_glucose_level + bmi + smoking_status, data = stroke)
 
-featurePlot(x = stroke[, 2:11], 
-            y = stroke$stroke,
+summary(stats, text = TRUE) %>% knitr::kable()
+
+featurePlot(x = stroke1[, 1:3], 
+            y = stroke1$stroke,
             scales = list(x = list(relation = "free"), 
-                        y = list(relation = "free")),
-            plot = "density", pch = "|", 
-            auto.key = list(columns = 2))
+                          y = list(relation = "free")),
+            plot = "density",
+            pch = "|", 
+            auto.key = list(columns = 2),
+            font = 2)
 ```
 
-# Perform logistic regression with "stroke" as the response and all other variables except "id" as predictors
+# Models
 
 ```{r}
 set.seed(1)
 
 indextrain <- createDataPartition(y = stroke2$id,
-                               p = 0.9,
+                               p = 0.8,
                                list = FALSE)
 
-train <- stroke2[indextrain, ]
+x <- stroke2[indextrain, -c(4, 12)]
 
-test <- stroke2[-indextrain, ]
-  
-glm.fit <- glm(stroke ~ gender + age + hypertension + heart_disease + ever_married + work_type + residence_type + avg_glucose_level + bmi +smoking_status, 
-               data = train, 
-               family = binomial)
+y <- stroke2$stroke[indextrain, ]
 
-summary(glm.fit)
-```
 
-# Compute confusion matrix 
-
-```{r}
-prob = predict(glm.fit,
-               newdata = test,
-               type = "response")
-
-pred = rep("0", length(prob))
-
-pred[prob > 0.5] = "1"
-
-confusionMatrix(data = as.factor(pred),
-                reference = test$stroke,
-                positive = "1")
-```
-
-# Fit logistic regression model using the training data with age, hypertension, and average glucose level as predictors
-
-```{r, fig.height=20, fig.width=20}
-glm.fit2 <- glm(stroke ~ age + hypertension + avg_glucose_level, 
-               data = train, 
-               family = binomial)
-
-summary(glm.fit2)
-
-prob2 = predict(glm.fit2,
-                newdata = test,
-                type = "response")
-
-roc.glm2 <- roc(test$stroke, prob2)
-
-plot(roc.glm2, legacy.axes = TRUE, print.auc = TRUE)
-
-plot(smooth(roc.glm2), col = 4, add = TRUE)
-```
-
-# Repeat using LDA and QDA
-
-```{r, fig.height=20, fig.width=20}
-lda.fit <- lda(stroke ~ age + hypertension + avg_glucose_level, 
-               data = train)
-
-prob3 = predict(lda.fit,
-                newdata = test)
-
-roc.lda <- roc(test$stroke, prob3$posterior[,2])
-
-plot(roc.lda, legacy.axes = TRUE, print.auc = TRUE)
-
-plot(smooth(roc.lda), col = 4, add = TRUE)
-
-qda.fit <- qda(stroke ~ age + hypertension + avg_glucose_level, 
-               data = train)
-
-prob4 = predict(qda.fit,
-                newdata = test)
-
-roc.qda <- roc(test$stroke, prob4$posterior[,2])
-
-plot(roc.qda, legacy.axes = TRUE, print.auc = TRUE)
-
-plot(smooth(roc.qda), col = 4, add = TRUE)
-```
-
-# Repeat using KNN
-
-```{r, fig.height=20, fig.width=20}
-set.seed(1)
-
-train_cl = train %>%
-  dplyr::select(age, hypertension, avg_glucose_level, stroke) %>% 
-  mutate(
-    stroke = recode(
-      stroke,
-      "0" = "No",
-      "1" = "Yes"
-    )
-  )
-
-test_cl = test %>%
-  dplyr::select(age, hypertension, avg_glucose_level, stroke) %>% 
-  mutate(
-    stroke = recode(
-      stroke,
-      "0" = "No",
-      "1" = "Yes"
-    )
-  )
-
-ctrl <- trainControl(method = "repeatedcv",
-                     repeats = 5,
-                     summaryFunction = twoClassSummary,
-                     classProbs = TRUE)
-
-knn.fit <- train(x = train_cl[1:3],
-                   y = train_cl$stroke,
-                   method = "knn",
-                   metric = "ROC",
-                   preProcess = c("center", "scale"),
-                   tuneGrid = data.frame(k = seq(1, 200, by = 5)),
-                   trControl = ctrl)
-
-ggplot(knn.fit)
-
-prob5 = predict(knn.fit,
-                newdata = test_cl,
-                type = "prob")
-
-roc.knn <- roc(test_cl$stroke, prob5$Yes, levels = c("No", "Yes"))
-
-plot(roc.knn, legacy.axes = TRUE, print.auc = TRUE)
-
-plot(smooth(roc.knn), col = 4, add = TRUE)
 ```
 
